theme: remove need for <hr> between post meta and body
I tried removing this before but kept it because it appeared
to be what made Safari Reader ignore `.post-meta` (e.g. the bullet
point and post category links). Without it, Reader would correctly
hoist the `H1` as title,  and `time` as date, but then leave the
remainder behind as non-sensical first paragraph of the article,
e.g.

> Post title
> By Post author on Post date.
>
>
> • Some tag
> The actual first paragraph.

Notice the dangling bullet and random tag link.

Looking around the web for unofficial guides, I noticed many
of them used class=byline on their metadata line. I didn't use
this before because the semantic <h1> and <time> sufficed for it
to correctly hoist it from inside <article>, and it doesn't make
any sense to me that it would hoist those while leaving the first
of that now-incomplete line of text behind.

The fact that there was an <hr> after "Some tag" made Safari consider
the start of the real content after it.

Use class=byline to make this work instead.

I tried adding class=byline to <header class=post-meta> instead
of adding a new element, but Reader didn't like that either.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,19 +6,23 @@ plainwhite:
 {%- assign date_format = site.plainwhite.date_format | default: "%-e %b %Y" -%}
 <article>
 <header class="post-meta">
-  <a class="post-link" href="{{ page.url | relative_url }}">
-    <h1>{{ page.title | escape }}</h1>
-  </a>
-  <span class="post-date"><time datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time></span>
-  •
-  {% for tag in page.tags -%}
+  <a class="post-link" href="{{ page.url | relative_url }}"><h1>{{ page.title | escape }}</h1></a>
+  {%- comment -%}
+  The `DIV.byline` element exists solely to please Safari Reader.
+  I've tried dozens of variations but without this, Safari will only hoist
+  the `H1` and `time` into its own header and leave "• Tag" behind as if
+  it was the first paragraph of the body content. The `byline` class is
+  internally hardcoded by Safari as way to hint ignoring anything else
+  in this block.
+  {%- endcomment %}
+  <div class="byline"><time class="post-date" datetime="{{ page.date | date: '%Y-%m-%d' }}">{{ page.date | date: date_format }}</time> • {% for tag in page.tags -%}
     {%- if page.tags.first != tag %}, {% endif -%}
     {%- assign tagpage = site.pages | where: "tag", tag | first -%}
     {%- assign tagtitle = tagpage.title | default: tag -%}
     <a rel="tag" class="post-tag" href="{% link {{ tag | prepend: 'tags/' | append: '.md' }} %}">{{ tagtitle | escape }}</a>
   {%- endfor -%}
+  </div>
 </header>
-<hr>
 <div class="post">
   {{- content | fix_extlink | fix_tooltip -}}
 </div>
