--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -14,16 +14,14 @@ plainwhite:
   <a class="post-link" href="{{ post.url | relative_url }}">
     <h2 class="post-title">{{ post.title | escape }}</h2>
   </a>
-  <div class="post-meta">
-    <div class="post-date"><a href="{{ post.url | relative_url }}" tabindex="-1"><time datetime="{{ post.date | date: '%Y-%m-%d' }}">{{ post.date | date: date_format }}</time></a></div>
-  </div>
+  <a class="post-date" href="{{ post.url | relative_url }}" tabindex="-1"><time datetime="{{ post.date | date: '%Y-%m-%d' }}">{{ post.date | date: date_format }}</time></a>
+  {%- if site.plainwhite.show_excerpts -%}
   <div class="post">
-    {%- if site.plainwhite.show_excerpts -%}
     {{- post.excerpt -}}
     {%- if post.excerpt != post.content -%}
-    <p class="screen-reader-text"><a href="{{ post.url | relative_url }}">Continue reading "{{ post.title | escape }}".</a></p>
-    {%- endif -%}
+    <a class="screen-reader-text" href="{{ post.url | relative_url }}">Continue reading "{{ post.title | escape }}".</a>
     {%- endif -%}
   </div>
+  {%- endif -%}
 </div>
 {%- endfor -%}
