theme: fix 'post-meta' border, adjust text color, remove 'dark-off' class
* Follows-up b4e3aa4, which introduced use of the
  'header.post-meta' selector for the border style,
  but then didn't use it for the border-color, thus only
  working in dark mode (due to its increased weight).

* Follows-up 2e3902f, which introduced dark mode and its soft purple
  tone, but failed to apply it to the main text color which remained
  neutral grey (and thus appear oddly yellow-ish).

* 'dark-off' was redundant, even before the related change in
  27ec95d, but I didn't notice it at the time as being unused.

--- a/_sass/plainwhite.scss
+++ b/_sass/plainwhite.scss
@@ -629,7 +629,7 @@ a[title] > [title]:focus:after {
 	.about {
 		color: map-get($vars, "textColorMuted");
 	}
-	.post-meta,
+	header.post-meta,
 	.posts-row {
 		border-color: map-get($vars, "textColorAccentMinor");
 		color: map-get($vars, "textColorMuted");
@@ -757,8 +757,8 @@ $darkModeVars: (
 	"backgroundRoot": #100e17,
 	"backgroundPanel": #000,
 	"textColorRoot": rgba(255, 255, 255, 0.90),
-	"textColorBase": #c2c2c2,
-	"textColorMinor": #c2c2c2,
+	"textColorBase": #bcbaca,
+	"textColorMinor": #bcbaca,
 	"textColorMuted": #837f9c,
 	"textColorLinkRoot": rgba(255, 255, 255, 0.92),
 	"textColorAccentMinor": lighten(#100e17, 25%),
@@ -784,10 +784,8 @@ $darkModeVars: (
 
 // Light (unscoped, as default)
 @include my-color-scheme($lightModeVars);
-.dark-off {
-	.dark-toggle::before {
-		content: '☾ Dark';
-	}
+.dark-toggle::before {
+	content: '☾ Dark';
 }
 .social a:hover .icon {
 	// Approximate $textColorLinkBase
